objects/Property__c.object
<CustomObject>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Retail</fullName>
                </value>
                <value>
                    <fullName>Office</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VariationSolicitorThreshold__c</fullName>
        <label>Variation Solicitor Threshold</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>YearlyTrafficCount__c</fullName>
        <inlineHelpText>For Retail Admin Use Only for Annual Audit Purposes.</inlineHelpText>
        <label>Yearly Traffic Count</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Property</label>
    <listViews>
        <fullName>AUProperties</fullName>
        <columns>NAME</columns>
        <columns>JDEPropertyNumber__c</columns>
        <columns>CentreType__c</columns>
        <columns>GLA__c</columns>
        <columns>PropertyState__c</columns>
        <columns>PriceBook__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>AU Properties</label>
    </listViews>
    <listViews>
        <fullName>AU_Properties_w_Centre_Code</fullName>
        <columns>NAME</columns>
        <columns>PropertyShortName__c</columns>
        <columns>JDEPropertyNumber__c</columns>
        <columns>CentreType__c</columns>
        <columns>GLA__c</columns>
        <columns>PropertyState__c</columns>
        <columns>PriceBook__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>Australia</value>
        </filters>
        <label>AU Properties w Centre Code</label>
    </listViews>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>JDEPropertyNumber__c</columns>
        <columns>CentreType__c</columns>
        <columns>GLA__c</columns>
        <columns>Type__c</columns>
        <columns>PropertyOwnershipType__c</columns>
        <columns>PropertyStatus__c</columns>
        <columns>PropertyCity__c</columns>
        <columns>PropertyState__c</columns>
        <columns>PropertyShortName__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>NZProperties</fullName>
        <columns>NAME</columns>
        <columns>JDEPropertyNumber__c</columns>
        <columns>CentreType__c</columns>
        <columns>GLA__c</columns>
        <columns>CURRENCY_ISO_CODE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Country__c</field>
            <operation>equals</operation>
            <value>New Zealand</value>
        </filters>
        <label>NZ Properties</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties</pluralLabel>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>PRO_CheckPricebookCurrencyCode</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK(PriceBook__c)) ,TEXT(CurrencyIsoCode)!=TEXT(PriceBook__r.CurrencyIsoCode))</errorConditionFormula>
        <errorMessage>Pricebook Currency don&apos;t match with Property Currency</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>PRO_CheckPropertyCurrencyCode</fullName>
        <active>true</active>
        <errorConditionFormula>OR(
AND(ISPICKVAL(Country__c, &apos;Australia&apos;), NOT(ISPICKVAL(CurrencyIsoCode,&apos;AUD&apos;))),
AND(ISPICKVAL(Country__c, &apos;New Zealand&apos;), NOT(ISPICKVAL(CurrencyIsoCode,&apos;NZD&apos;)))
)</errorConditionFormula>
        <errorMessage>Country and Currency code don&apos;t match</errorMessage>
    </validationRules>
</CustomObject>